<resources>
    <string name="app_name">MyRead</string>

    <!-- Sync Preferences -->
    <string name="title_activity_main">MyRead</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search books</string>
    <string name="menu_library">Library</string>


    <!--    Register & login-->
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_not_entered">Username field is empty!</string>
    <string name="username_no_special_chars">Username cannot contain special characters!</string>
    <string name="password_not_entered">Password field is empty!</string>
    <string name="password_requirements">Password must contain 9 characters with at least a number, a lower case letter, an upper case letter and a special character!</string>
    <string name="password_no_username">Password must not contain username!</string>
    <string name="request_confirm_password">Please confirm your password in the second field!</string>
    <string name="server_unreachable">Unable to reach server.</string>
    <string name="no_body_in_request">No body in request!</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed!</string>

    <string name="no_results">No results found!</string>
    <string name="no_collections">No collections found! Try creating a collection first.</string>
    <string name="no_wikipedia">%s does not have a Wikipedia page!</string>
    <string name="no_amazon">%s does not have an Amazon page!</string>

    <string name="datasaverswitch_desc">A switch to turn on the data saver</string>
    <string name="datasaverswitch_text">Data Saver</string>
    <string name="userstatsswitch_desc">A switch to turn on the sharing of anonymous user statistics</string>
    <string name="userstatsswitch_text">Share anonymous user statistics</string>
    <string name="searchbar_hint">Book name:</string>
    <string name="already_account_txt">Already have an account?</string>
    <string name="no_account_txt">Don\'t have an account yet?</string>

    <string name="search_books">Search books</string>
    <string name="menu_logout">Log out</string>

    <!--    library-->
    <string name="library">Library</string>
    <string name="book_collections">Book collections</string>
    <string name="new_collection">Create your new collection</string>
    <string name="rename_collection">Rename your collection</string>
    <string name="add_collection_btn">Add</string>
    <string name="cancel_collection_btn">Cancel</string>

    <!--    Collection-->
    <string name="book_collection">Book collection</string>
    <string name="books">Books</string>
    <string name="select_a_collection">Select a collection</string>

    <!-- IP -->
    <string name="ip">YUhSMGNITTZMeTl6YjJOcFlXeHlaV0ZrTG5Sck9qSXdORGd2</string>
    <string name="renamebutton">Rename</string>
    <string name="book_cover">Cover</string>
    <string name="book_cover_image_description">Book cover image</string>
    <string name="book_icon_description">book icon</string>
    <string name="rating">rating</string>
    <string name="book_author">Author</string>
    <string name="book_year">book_year</string>
    <string name="book_genre">book_genre</string>
    <string name="isbn">isbn: </string>
    <string name="year">Year: </string>
    <string name="book_title">Title</string>
    <string name="description">Description</string>
    <string name="wiki">Wiki</string>
    <string name="more_information">More information</string>
    <string name="genre">Genre: </string>
    <string name="plus">+</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="unknown">unknown %1$s</string>
    <string name="count_books">Contains %1$d book(s)</string>
    <string name="recommended_title">Recommended</string>
    <string name="amazon">Amazon</string>
    <string name="update">Update</string>

    <!--    Settings-->
    <string name="deleteAccountBtn">Delete account</string>
    <string name="deleteAccountText">Delete your account</string>
    <string name="deleteAccountTextConfirmation">In order to delete your account you must confirm your password.</string>
    <string name="deletePassword">Password</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
</resources>