<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BackgroundCardColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/changePass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changePassOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Collection name"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/changePassNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Collection name"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/changePassNewPassRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Collection name"
        android:hint="@string/repeat_new_password"
        android:inputType="textPassword"
        android:maxLines="1" />

</LinearLayout>
