<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_library"
        android:name="com.example.myread.ui.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_library_to_collectionFragment"
            app:destination="@id/collectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myread.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_bookFragment"
            app:destination="@id/bookFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.myread.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_bookFragment"
            app:destination="@id/bookFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myread.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/collectionFragment"
        android:name="com.example.myread.CollectionFragment">
        <action
            android:id="@+id/action_collectionFragment_to_bookFragment"
            app:destination="@id/bookFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookFragment"
        android:name="com.example.myread.BookFragment" />
</navigation>